duniverse/menhirLib.20200211/test/static/bad/arity-split.mly
%token A B
%start<unit> main
%%
main: foo {}

%public foo   : A {}
%public foo(X): X {}
