duniverse/menhirLib.20200211/test/static/bad/arity-split.exp
File "arity-split.mly", line 7, characters 8-11:
File "arity-split.mly", line 6, characters 8-11:
Error: the symbol foo is defined with arities 1 and 0.
